<resources>
    <string name="app_name" translatable="false">MdirFileManager</string>
    <string name="date_format_pattern" translatable="false">yy-MM-dd HH:mm</string>
    <string name="string_m_dir" translatable="false">M Dir</string>
    <string name="string_map" translatable="false">MAP</string>

    <string name="string_uppercase_rename" translatable="false">RENAME</string>
    <string name="string_uppercase_copy" translatable="false">COPY</string>
    <string name="string_uppercase_share" translatable="false">SHARE</string>
    <string name="string_uppercase_delete" translatable="false">DELETE</string>
    <string name="string_uppercase_favorite" translatable="false">FAVORITE</string>

    <string name="menu_hide_show">Show hidden folder/files</string>
    <string name="sub_item">" item"</string>
    <string name="sub_items">" items"</string>
    <string name="msg_empty">EMPTY</string>
</resources>
