<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="snackbar"
            type="com.example.projects.mdir.view.FileSnackBar" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black">

        <TextView
            style="@style/SnackBarTextView"
            android:id="@+id/bt_snack_rename"
            android:text="@string/string_uppercase_rename"
            android:onClick="@{()->snackbar.rename()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bt_snack_copy"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            style="@style/SnackBarTextView"
            android:id="@+id/bt_snack_copy"
            android:text="@string/string_uppercase_copy"
            android:onClick="@{()->snackbar.copy()}"
            app:layout_constraintStart_toEndOf="@id/bt_snack_rename"
            app:layout_constraintEnd_toStartOf="@id/bt_snack_share"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            style="@style/SnackBarTextView"
            android:id="@+id/bt_snack_share"
            android:text="@string/string_uppercase_share"
            android:onClick="@{()->snackbar.share()}"
            app:layout_constraintStart_toEndOf="@id/bt_snack_copy"
            app:layout_constraintEnd_toStartOf="@id/bt_snack_delete"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            style="@style/SnackBarTextView"
            android:id="@+id/bt_snack_delete"
            android:text="@string/string_uppercase_delete"
            android:onClick="@{()->snackbar.delete()}"
            app:layout_constraintStart_toEndOf="@id/bt_snack_share"
            app:layout_constraintEnd_toStartOf="@id/bt_snack_favorite"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            style="@style/SnackBarTextView"
            android:id="@+id/bt_snack_favorite"
            android:text="@string/string_uppercase_favorite"
            android:onClick="@{()->snackbar.favorite()}"
            app:layout_constraintStart_toEndOf="@id/bt_snack_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>